Add resume page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link" href="#">Home</a>
-                    <a class="nav-link" href="#">Resume</a>
+                    <a class="nav-link" href="resumes/resume_v2.2.pdf" target="_blank">Resume</a>
                     <a class="nav-link" href="#">Blog</a>
                     <a class="nav-link" href="#">Contact</a>
                 </div>
@@ -56,7 +56,7 @@
             </div>
             <div class="col-sm pt-5">
                 <h1>Noah Charlton</h1>
-                <p>Hi! My name is Noah Charlton. </p>
+                <p>Hi! I am a college student interested in progrmaming, electronics, and robotics. </p>
                 <h3>Education</h3>
 
                 <div class="container">
@@ -124,9 +124,19 @@
             </div>
             <div class="card my-3 mx-3" style="max-width: 260px;">
                 <div class="card-body">
+                    <h5 class="card-title">KGPU</h5>
+                    <p class="card-text">
+                        I am the creator of kgpu, a library that provides Kotlin bindings to 
+                        the WebGPU API on the Web and on the Desktop. 
+                    </p>
+                    <a href="https://www.github.com/kgpu/kgpu" class="btn btn-primary">GitHub Repo</a>
+                </div>
+            </div>
+            <div class="card my-3 mx-3" style="max-width: 260px;">
+                <div class="card-body">
                     <h5 class="card-title">Ohio Supercomputer Center Technician</h5>
                     <p class="card-text">
-                        During the school year, I work at the Ohio Supercomputer Center
+                        During the school year, I work at the Ohio Supercomputer Center (OSC)
                         as a Student Datacenter Technician.
                     </p>
                     <a href="https://www.osc.edu/" class="btn btn-primary">OSC Homepage</a>
