--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
                 <div class="navbar-nav">
                     <a class="nav-link" href="#">Home</a>
                     <a class="nav-link" href="resumes/resume_v2.2.pdf" target="_blank">Resume</a>
-                    <a class="nav-link" href="#">Blog</a>
-                    <a class="nav-link" href="#">Contact</a>
                 </div>
             </div>
         </div>
@@ -33,7 +31,7 @@
             <div class="col-sm my-auto pt-5">
                 <div class="container" style="max-width:300px">
                     <div class="row">
-                        <img src="photo.png" class="img-thumbnail rounded my-3" style="border: 0;" alt="Personal Photo">
+                        <img src="photo.png" class="img-thumbnail rounded-circle my-3" style="border: 0;" alt="Personal Photo">
                     </div>
                     <div class="row">
                         <div class="col">
@@ -56,7 +54,7 @@
             </div>
             <div class="col-sm pt-5">
                 <h1>Noah Charlton</h1>
-                <p>Hi! I am a college student interested in progrmaming, electronics, and robotics. </p>
+                <p>Hi! I am a college student interested in programming, electronics, and robotics. </p>
                 <h3>Education</h3>
 
                 <div class="container">
@@ -84,9 +82,11 @@
             </div>
         </div>
         <div class="row">
-            <h3 class="text-center pt-5">Experience, Projects, and Awards</h3>
+             <div class="col">
+                <h3 class="text-center pt-5">Experience, Projects, and Awards</h3>
+            </div>
         </div>
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="card my-3 mx-3" style="max-width: 260px;">
                 <div class="card-body">
                     <h5 class="card-title">Undergradute Research Assistant</h5>
@@ -143,7 +143,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>  
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
