Add google analytics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Noah Charlton</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-505T122RD5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-505T122RD5');
+    </script>
 </head>
 
 <body>
@@ -31,7 +41,8 @@
             <div class="col-sm my-auto pt-5">
                 <div class="container" style="max-width:300px">
                     <div class="row">
-                        <img src="photo.png" class="img-thumbnail rounded-circle my-3" style="border: 0;" alt="Personal Photo">
+                        <img src="photo.png" class="img-thumbnail rounded-circle my-3" style="border: 0;"
+                            alt="Personal Photo">
                     </div>
                     <div class="row">
                         <div class="col">
@@ -82,7 +93,7 @@
             </div>
         </div>
         <div class="row">
-             <div class="col">
+            <div class="col">
                 <h3 class="text-center pt-5">Experience, Projects, and Awards</h3>
             </div>
         </div>
@@ -95,7 +106,8 @@
                         resarching how to use machine learning to model water flux in Ohio Wetlands. Eventually,
                         we hope to use this model to calculate Methane Flux from missing data.
                     </p>
-                    <a href="https://ceg.osu.edu/ecohydrology-and-forest-meteorology-laboratory" class="btn btn-primary">Bohrer Lab</a>
+                    <a href="https://ceg.osu.edu/ecohydrology-and-forest-meteorology-laboratory"
+                        class="btn btn-primary">Bohrer Lab</a>
                 </div>
             </div>
             <div class="card my-3 mx-3" style="max-width: 260px;">
@@ -126,8 +138,8 @@
                 <div class="card-body">
                     <h5 class="card-title">KGPU</h5>
                     <p class="card-text">
-                        I am the creator of kgpu, a library that provides Kotlin bindings to 
-                        the WebGPU API on the Web and on the Desktop. 
+                        I am the creator of kgpu, a library that provides Kotlin bindings to
+                        the WebGPU API on the Web and on the Desktop.
                     </p>
                     <a href="https://www.github.com/kgpu/kgpu" class="btn btn-primary">GitHub Repo</a>
                 </div>
@@ -143,7 +155,7 @@
                 </div>
             </div>
         </div>
-    </div>  
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
