--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link" href="#">Home</a>
                     <a class="nav-link" href="resumes/resume_v2.2.pdf" target="_blank">Resume</a>
+                    <a class="nav-link" href="waffle.html">Waffle Unlimited</a>
                 </div>
             </div>
         </div>
@@ -103,8 +104,7 @@
                     <h5 class="card-title">Undergradute Research Assistant</h5>
                     <p class="card-text">
                         I am currently working for Dr. Gil Bohrer as an undergraduate research assistant. I am
-                        resarching how to use machine learning to model water flux in Ohio Wetlands. Eventually,
-                        we hope to use this model to calculate Methane Flux from missing data.
+                        resarching how to use machine learning to model water flux in Ohio Wetlands.
                     </p>
                     <a href="https://ceg.osu.edu/ecohydrology-and-forest-meteorology-laboratory"
                         class="btn btn-primary">Bohrer Lab</a>
