Add UTA job and research poster, update resume

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link" href="#">Home</a>
-                    <a class="nav-link" href="resumes/resume_v2.2.pdf" target="_blank">Resume</a>
-                    <a class="nav-link" href="waffle.html">Waffle Unlimited</a>
+                    <a class="nav-link" href="resumes/resume_v4.0.pdf" target="_blank">Resume</a>
                 </div>
             </div>
         </div>
@@ -101,13 +100,26 @@
         <div class="row justify-content-center">
             <div class="card my-3 mx-3" style="max-width: 260px;">
                 <div class="card-body">
+                    <h5 class="card-title">Undergradute Teaching Assistant</h5>
+                    <p class="card-text">
+                        I am currently working as an undergraduate teaching assistant for the Department of Engineering Education (EED) 
+                        at The Ohio State University. 
+                    </p>
+                    <a href="https://eed.osu.edu/"
+                        class="btn btn-primary">EED Website</a>
+                </div>
+            </div>
+            <div class="card my-3 mx-3" style="max-width: 260px;">
+                <div class="card-body">
                     <h5 class="card-title">Undergradute Research Assistant</h5>
                     <p class="card-text">
                         I am currently working for Dr. Gil Bohrer as an undergraduate research assistant. I am
                         resarching how to use machine learning to model water flux in Ohio Wetlands.
                     </p>
                     <a href="https://ceg.osu.edu/ecohydrology-and-forest-meteorology-laboratory"
-                        class="btn btn-primary">Bohrer Lab</a>
+                        class="btn btn-primary my-2">Bohrer Lab</a>
+                    <a href="summer2022_research_poster.pdf"
+                        class="btn btn-primary">Summer 2022 Poster</a>
                 </div>
             </div>
             <div class="card my-3 mx-3" style="max-width: 260px;">
