--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link" href="#">Home</a>
-                    <a class="nav-link" href="resumes/resume_v4.0.pdf" target="_blank">Resume</a>
+                    <a class="nav-link" href="resumes/resume_current.pdf" target="_blank">Resume</a>
                 </div>
             </div>
         </div>
