Update website with Battelle job

--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
 
                 <h3>Interests</h3>
                 <ul>
-                    <li>High Perfomance Computing</li>
                     <li>Embedded Systems</li>
                     <li>Robotics</li>
                     <li>Engineering Education</li>
@@ -100,21 +99,34 @@
         <div class="row justify-content-center">
             <div class="card my-3 mx-3" style="max-width: 260px;">
                 <div class="card-body">
-                    <h5 class="card-title">Undergradute Teaching Assistant</h5>
+                    <h5 class="card-title">Software Engineering Intern</h5>
                     <p class="card-text">
-                        I am currently working as an undergraduate teaching assistant for the Department of Engineering Education (EED) 
-                        at The Ohio State University. 
+                        Since January 2023, I have been working at the Battelle Memorial Institute developing 
+                        software for complex embedded systems. 
                     </p>
-                    <a href="https://eed.osu.edu/"
-                        class="btn btn-primary">EED Website</a>
+                    <a href="https://www.battelle.org/markets/national-security/mission-solutions"
+                        class="btn btn-primary">Battelle Website</a>
+                </div>
+            </div>
+            <div class="card my-3 mx-3" style="max-width: 260px;">
+                <div class="card-body">
+                    <h5 class="card-title">Underwater Robotics</h5>
+                    <p class="card-text">
+                        I am a member of The Ohio State Underwater Robotics Team where I develop 
+                        firmware for our custom PCBs. 
+                    </p>
+                    <a href="https://github.com/osu-uwrt/titan_firmware"
+                        class="btn btn-primary my-2">Firmware GitHub Repo</a>
+                    <a href="https://org.osu.edu/osu-uwrt/"
+                        class="btn btn-primary">Team Website</a>
                 </div>
             </div>
             <div class="card my-3 mx-3" style="max-width: 260px;">
                 <div class="card-body">
                     <h5 class="card-title">Undergradute Research Assistant</h5>
                     <p class="card-text">
-                        I am currently working for Dr. Gil Bohrer as an undergraduate research assistant. I am
-                        resarching how to use machine learning to model water flux in Ohio Wetlands.
+                        I worked for Dr. Gil Bohrer as an undergraduate research assistant. I
+                        resarched how to use machine learning to model water flux in Ohio Wetlands.
                     </p>
                     <a href="https://ceg.osu.edu/ecohydrology-and-forest-meteorology-laboratory"
                         class="btn btn-primary my-2">Bohrer Lab</a>
@@ -124,13 +136,13 @@
             </div>
             <div class="card my-3 mx-3" style="max-width: 260px;">
                 <div class="card-body">
-                    <h5 class="card-title">FIRST Robotics Mentor</h5>
+                    <h5 class="card-title">FROS President</h5>
                     <p class="card-text">
-                        I volunteer as a mentor for the Columbus School for Girls High School Robotics Team, Murphy's
-                        Outlaws.
-                        I also serve on the executive board for FIRST Robotics Alumni at Ohio State (FROS).
+                        I currently serve as the President of the FIRST Alumni and Robotics at Ohio State (FROS). 
+                        My main initiative as FROS President is starting a new subteam to compete in the NASA Lunabotics Compeition.
+                        I also mentor the Columbus School For Girl's High School Robotics Team in my free time. 
                     </p>
-                    <a href="https://firstteam677.wordpress.com/" class="btn btn-primary">Team Website</a>
+                    <a href="https://org.osu.edu/firstrobotics/" class="btn btn-primary">FROS Website</a>
                 </div>
             </div>
             <div class="card my-3 mx-3" style="max-width: 260px;">
@@ -154,16 +166,6 @@
                         the WebGPU API on the Web and on the Desktop.
                     </p>
                     <a href="https://www.github.com/kgpu/kgpu" class="btn btn-primary">GitHub Repo</a>
-                </div>
-            </div>
-            <div class="card my-3 mx-3" style="max-width: 260px;">
-                <div class="card-body">
-                    <h5 class="card-title">Ohio Supercomputer Center Technician</h5>
-                    <p class="card-text">
-                        During the school year, I work at the Ohio Supercomputer Center (OSC)
-                        as a Student Datacenter Technician.
-                    </p>
-                    <a href="https://www.osc.edu/" class="btn btn-primary">OSC Homepage</a>
                 </div>
             </div>
         </div>
