updates to reflect graduation

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="col-sm pt-5">
                 <h1>Noah Charlton</h1>
-                <p>Hi! I am a student at Ohio State interested in programming, electronics, and robotics. </p>
+                <p>Hi! I am a software engineer interested in programming, electronics, and robotics. </p>
                 <h3>Education</h3>
 
                 <div class="container">
@@ -98,7 +98,8 @@
                             <h5>The Ohio State University</h4>
                                 <ul class="list-unstyled">
                                     <li>B.S. Computer Science and Engineering</li>
-                                    <li>Expected Graduation: May 2025</li>
+                                    <li>Graduated: May 2025</li>
+                                    <li><i>Summa Cum Laude</i></li>
                                 </ul>
                         </div>
                     </div>
@@ -124,10 +125,17 @@
                     <p class="card-text">
                         At Battelle, I develop software for complex embedded systems.
                     </p>
-                    <p class="card-text">
-                        <strong>Role:</strong> Software Engineering Intern (Jan. 2023 - Present)
-                        <br>
-                        <strong>Awards:</strong> Outstanding Performance Award (x2)
+                    <p class="card-text" style="margin: 0px;">
+                        <strong>Roles:</strong> 
+                        <ul style="margin:0px">
+                            <li>Software Engineer (May 2025 - Present)</li>
+                            <li>Software Engineering Intern (Jan. 2023 - May 2025)</li>
+                        </ul>
+                        <strong>Awards:</strong> 
+                            <ul style="margin:0px">
+                                <li>Student Impact Award (from OSU): <a href="https://ecs.osu.edu/2025-student-impact-award-winners">Link</a></li>
+                                <li>Outstanding Performance Award (x2)</li>
+                            </ul>
                     </p>
                 </div>
             </div>
